kbv corona report unterseite

--- a/Start.Rmd
+++ b/Start.Rmd
@@ -6,6 +6,7 @@ output:
        - { title: "Dashboard", href: "Start.html", align: left }
        - { title: "Bundesländer", href: "Bundeslaender.html", align: left }
        - { title: "Kreise", href: "Kreise.html", align: left }
+       - { title: "KBV-Report", href: "Report.html", align: left }
        - { title: "Impressum", href: "Impressum.html", align: left }
     orientation: rows
     vertical_layout: scroll 
@@ -194,7 +195,7 @@ Row
 ```{r renderothersites, include=FALSE}
 rmarkdown::render('Bundeslaender.Rmd')
 rmarkdown::render('Kreise.Rmd')
+rmarkdown::render('Report.Rmd')
 rmarkdown::render('Impressum.Rmd')
-# rmarkdown::render('Test.Rmd')
 ```
 
