add link kbv report

--- a/Report.Rmd
+++ b/Report.Rmd
@@ -24,6 +24,6 @@ Row
 
 Jeden Mittwoch veröffentlicht die Kassenärztliche Bundesvereinigung (KBV) gemeinsam mit dem Zentralinstitut für die kassenärztliche Versorgung (Zi) mit dem *Corona-Report* ein Faktenblatt mit Kennzahlen zur Einordnung des Infektionsgeschehens.
 
-Den aktuellen Corona-Report finden Sie hier.
+[Den aktuellen Corona-Report finden Sie hier](https://www.kbv.de/html/corona-report.php).
 
 Zum besseren Verständnis des Reports finden Sie eine kommentierte Lesehilfe hier.
