update links faktenblatt und lesehilfe

--- a/Report.Rmd
+++ b/Report.Rmd
@@ -26,4 +26,4 @@ Jeden Mittwoch veröffentlicht die Kassenärztliche Bundesvereinigung (KBV) geme
 
 [Den aktuellen Corona-Report finden Sie hier](https://www.kbv.de/html/corona-report.php).
 
-Zum besseren Verständnis des Reports finden Sie eine kommentierte Lesehilfe hier.
+Zum besseren Verständnis des Reports finden Sie eine kommentierte Lesehilfe [hier](https://www.zidatasciencelab.de/covid19dashboard/static/KBV-Corona-Report_Lesehilfe.pdf).
