--- a/Report.Rmd
+++ b/Report.Rmd
@@ -22,7 +22,7 @@ Row
 
 ### **KBV-Corona-Report**
 
-Jeden Mittwoch veröffentlicht die Kassenärztliche Bundesvereinigung (KBV) gemeinsam mit dem Zentralinstitut für die kassenärztliche Versorgung (Zi) mit dem *Corona-Report* ein Faktenblatt mit Kennzahlen zur Einordnung des Infektionsgeschehens.
+Jeden Mittwoch veröffentlicht die Kassenärztliche Bundesvereinigung (KBV) gemeinsam mit dem Zentralinstitut für die kassenärztliche Versorgung (Zi) den **Corona-Report**, ein Faktenblatt mit Kennzahlen zur Einordnung des Infektionsgeschehens.
 
 [Den aktuellen Corona-Report finden Sie hier](https://www.kbv.de/html/corona-report.php).
 
