--- a/Kreise.Rmd
+++ b/Kreise.Rmd
@@ -20,7 +20,7 @@ Row
 
 ### **Überblick zu den Kennzahlen der Kreise**
 
-Nachfolgend erhalten Sie einen Überblick zur Situation der einzelnen Kreise. Bitte beachten Sie, dass der Indikator Vorwarnzeit auf Ebene der Kreise und Städte nicht losgelöst von der Situation in der jeweiligen Region betrachtet werden sollte. Wir berichten deshalb eine Vorwarnzeit auf Kreisebene sowie die Vorwarnzeit der übergeordneten Raumordnungsregion (ROR).
+Nachfolgend erhalten Sie einen Überblick zur Situation der einzelnen Kreise. Bitte beachten Sie, dass der Indikator Vorwarnzeit auf Ebene der Kreise und Städte nicht losgelöst von der Situation in der jeweiligen Region betrachtet werden sollte. Wir berichten deshalb eine Vorwarnzeit lokal auf Kreisebene sowie die Vorwarnzeit der übergeordneten Raumordnungsregion (ROR).
 
 Row
 -----------------------------------------------------------------------
