--- a/Bundeslaender.Rmd
+++ b/Bundeslaender.Rmd
@@ -30,7 +30,7 @@ DT::datatable(bundeslaender_table,
                              searching = FALSE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
                              server = FALSE,
-                             initComplete = JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
+                             initComplete = DT::JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
 
 ```
 </div>
@@ -38,9 +38,9 @@ DT::datatable(bundeslaender_table,
 Row
 -----------------------------------------------------------------------
 
-### **Überblick zum Verlauf des R-Wertes und der Vorwarnzeit in den Bundesländern**
+### **Überblick zum Verlauf der altersgruppenspezifischen Inzidenzen und der Vorwarnzeit in den Bundesländern**
 
-Nachfolgend erhalten Sie einen Überblick zur allgemeinen historischen Situation der einzelnen Bundesländer. Einzelne Ausschläge des R-Wertes bedeuten noch keine kritische Situation, aber ein kontinuierlicher Rückgang der Vorwarnzeit ist als kritisch einzuschätzen. Fehlende Werte für die Vorwarnzeit ergeben sich aus 0 gemeldeten neuen Fällen im entsprechenden Bundesland oder Vorwarnzeiten größer als 180 Tage.
+Nachfolgend erhalten Sie einen Überblick zur allgemeinen historischen Situation der einzelnen Bundesländer. Dargestellt werden die Sieben-Tages-Inzidenzen (Fälle pro 100.000 Einwohnende in den letzten sieben Tagen) nach Altersgruppen und die Vorwarnzeit. Ein kontinuierlicher Rückgang der Vorwarnzeit ist als kritisch einzuschätzen. Fehlende Werte für die Vorwarnzeit ergeben sich aus 0 gemeldeten neuen Fällen im entsprechenden Bundesland oder Vorwarnzeiten größer als 180 Tage.
 
 Row {.tabset .tabset-fade data-height=500}
 -------------------------------------
@@ -48,112 +48,128 @@ Row {.tabset .tabset-fade data-height=500}
 ### Schleswig-Holstein {#bl01}
 
 ```{r plotsBL01}
-bundeslaender_r_und_vwz_plot(1) %>%
+bundeslaender_stiag_und_vwz_plot(1) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Hamburg {#bl02}
     
 ```{r plotsBL02}
-bundeslaender_r_und_vwz_plot(2) %>%
+bundeslaender_stiag_und_vwz_plot(2) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
 ### Niedersachsen {#bl03}
 
 ```{r plotsBL03}
-bundeslaender_r_und_vwz_plot(3) %>%
+bundeslaender_stiag_und_vwz_plot(3) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Bremen {#bl04}
     
 ```{r plotsBL04}
-bundeslaender_r_und_vwz_plot(4) %>%
+bundeslaender_stiag_und_vwz_plot(4) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
 ### Nordrhein-Westfalen {#bl05}
 
 ```{r plotsBL05}
-bundeslaender_r_und_vwz_plot(5) %>%
+bundeslaender_stiag_und_vwz_plot(5) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Hessen {#bl06}
     
 ```{r plotsBL06}
-bundeslaender_r_und_vwz_plot(6) %>%
+bundeslaender_stiag_und_vwz_plot(6) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
 ### Rheinland-Pfalz {#bl07}
 
 ```{r plotsBL07}
-bundeslaender_r_und_vwz_plot(7) %>%
+bundeslaender_stiag_und_vwz_plot(7) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Baden-Württemberg {#bl08}
     
 ```{r plotsBL08}
-bundeslaender_r_und_vwz_plot(8) %>%
+bundeslaender_stiag_und_vwz_plot(8) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
 ### Bayern {#bl09}
 
 ```{r plotsBL09}
-bundeslaender_r_und_vwz_plot(9) %>%
+bundeslaender_stiag_und_vwz_plot(9) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Saarland {#bl10}
     
 ```{r plotsBL10}
-bundeslaender_r_und_vwz_plot(10) %>%
+bundeslaender_stiag_und_vwz_plot(10) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
 ### Berlin {#bl11}
 
 ```{r plotsBL11}
-bundeslaender_r_und_vwz_plot(11) %>%
+bundeslaender_stiag_und_vwz_plot(11) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Brandenburg {#bl12}
     
 ```{r plotsBL12}
-bundeslaender_r_und_vwz_plot(12) %>%
+bundeslaender_stiag_und_vwz_plot(12) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
 ### Mecklenburg-Vorpommern {#bl13}
 
 ```{r plotsBL13}
-bundeslaender_r_und_vwz_plot(13) %>%
+bundeslaender_stiag_und_vwz_plot(13) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Sachsen {#bl14}
     
 ```{r plotsBL14}
-bundeslaender_r_und_vwz_plot(14) %>%
+bundeslaender_stiag_und_vwz_plot(14) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
 ### Sachsen-Anhalt {#bl15}
 
 ```{r plotsBL15}
-bundeslaender_r_und_vwz_plot(15) %>%
+bundeslaender_stiag_und_vwz_plot(15) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```   
  
 ### Thüringen {#bl16}
     
 ```{r plotsBL16}
-bundeslaender_r_und_vwz_plot(16) %>%
+bundeslaender_stiag_und_vwz_plot(16) %>%
+  layout(legend = list(orientation = "h", x = 0.6, y = 1.2), autosize=TRUE) %>%
    config(displayModeBar = FALSE, responsive=T)
 ```
 
