--- a/R/adhoc_analyses/Lockdown_Effect.Rmd
+++ b/R/adhoc_analyses/Lockdown_Effect.Rmd
@@ -21,9 +21,16 @@ output:
 ### Calculations 
  
 ```{r}
+library("tidyverse")
+b117 <- .5
 R0 <- 3.3
 Lockdown_light_Effect = R0*(1-.45)*(1-.15)
+Lockdown_light_Effect_b117 = (R0+b117)*(1-.45)*(1-.15)
 Hard_Lockdown_Effect = R0*(1-.45)*(1-.25)*(1-.40)*(1-.15)
+Hard_Lockdown_Effect_b117 = (R0+b117)*(1-.45)*(1-.25)*(1-.40)*(1-.15)
+
+all_scens= data.frame('scenario'=c("light","light b 1.1.7","hard","hard b 1.1.7"),effect=c(Lockdown_light_Effect,Lockdown_light_Effect_b117,Hard_Lockdown_Effect,Hard_Lockdown_Effect_b117))
+
 ```
  
 Overall estimated R(t) based on **lockdown light* should have been `r Lockdown_light_Effect`. Everything below this can be considered a success.
@@ -34,19 +41,34 @@ Overall estimated R(t) based on **lockdown* from 2020-12-15 should be `r Hard_Lo
 official threshold of 50 cases per 100k inhabitants within 7 days is reached.
 
 ```{r}
+current_cases_daily = 269500/10
 population = 82.5 * 1e6
 goal_daily = round((population/100000)*(50)/7)
-Reduction_daily = 1*Hard_Lockdown_Effect^.1
-days_till_goal = round((-1*log(30000/goal_daily)/log(Reduction_daily)))
-date = as.Date("2020-12-16")+lubridate::days(days_till_goal)
-time_until_recap = as.integer(as.Date("2021-1-10")-as.Date("2020-12-16"))
-cases_on_recap = 30000*Reduction_daily^time_until_recap
-incidence_on_recap = 7*cases_on_recap/(population/100000)
 ```
+
+
+```{r}
+estimate_duration <- function(df,goal){
+  goal_daily = round((population/100000)*(goal)/7)
+  newdf = df %>%
+    mutate(Reduction_daily = 1*effect^.1,
+           days_till_goal = round((-1*log(current_cases_daily/goal_daily)/log(Reduction_daily))),
+    date = lubridate::now()-lubridate::days(1)+lubridate::days(days_till_goal),
+    result = ifelse(effect<1,format(date),"never"))
+  newdf$result
+}
+```
+
 
 ### So, how long for Germany 50?
 
-The goal is to reduce the daily cases to `r goal_daily`. With the estimated R(t) this will take **`r days_till_goal` days** or until **`r date`** this goal is reached. On January 10th we will be roughly down to `r format(round(cases_on_recap),scientific=FALSE)` daily cases and an incidence of `r round(incidence_on_recap)` cases per 7 days for 100k inhabitants.
+The goal is to reduce the daily cases to 50 or better 20 (in light of b.1.1.7) per 7 days. This is, how long it will take:
+
+```{r}
+all_scens %>% mutate("goal 50"=estimate_duration(.,50),"gaol 20"=estimate_duration(.,7))
+```
+
+
 
 
 
