--- a/Impressum.Rmd
+++ b/Impressum.Rmd
@@ -66,3 +66,6 @@ Dr. Dominik Graf von Stillfried
   
 Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen.
 
+### Datenschutzhinweis
+
+Um die durch das Zi durchgeführten Berechnungen zur COVID-19-Pandemie vollständig zu dokumentieren und so nachvollziehbar zu machen, wird die Quellcodeverwaltungsplattform github.com genutzt. Auf der Plattform ist der Quellcode für das vorliegende Dashboard, inklusive aller Änderungen, vollumfänglich unter [github.com/zidatalab/covid19dashboard] (https://github.com/zidatalab/covid19dashboard) dokumentiert. Für die Nutzung dieser Internetseite gelten darum die Datenschutzinformationen von github.com [(Github Privacy Statement)](https://docs.github.com/en/free-pro-team@latest/github/site-policy/github-privacy-statement).
