--- a/R/adhoc_analyses/Lockdown_Effect.Rmd
+++ b/R/adhoc_analyses/Lockdown_Effect.Rmd
@@ -34,9 +34,9 @@ b117 <- .5
 R0 <- 3.3
 # R0+b117 or R0*(1+b117) ? https://twitter.com/AdamJKucharski/status/1343567425107881986
 Lockdown_light_Effect = R0*(1-.45)*(1-.15)
-Lockdown_light_Effect_b117 = (R0+b117)*(1-.45)*(1-.15)
+Lockdown_light_Effect_b117 = (R0)*(1-.45)*(1-.15)+b117
 Hard_Lockdown_Effect = R0*(1-.45)*(1-.25)*(1-.40)*(1-.15)
-Hard_Lockdown_Effect_b117 = (R0+b117)*(1-.45)*(1-.25)*(1-.40)*(1-.15)
+Hard_Lockdown_Effect_b117 = (R0*(1-.45)*(1-.15)+b117)*(1-.25)*(1-.40)
 
 all_scens= data.frame('scenario'=c("light","light b 1.1.7","hard","hard b 1.1.7"),effect=c(Lockdown_light_Effect,Lockdown_light_Effect_b117,Hard_Lockdown_Effect,Hard_Lockdown_Effect_b117))
 
