--- a/Projektion.Rmd
+++ b/Projektion.Rmd
@@ -13,47 +13,40 @@ output:
     logo: static/logo.png
     theme: bootstrap
     css: static/styles.css
+    
+    
 ---
 
 Row
 -----------------------------------------------------------------------
 
-### **Überblick zur Inzidenz ausgewählter Kreise**
+### **Projektionen der Bundesländer**
 
-Nachfolgend erhalten Sie einen Überblick zur Situation einzelner Kreise.
-Die berichteten Inzidenzen können sich wegen der Zi-Korrektur für Meldeverzüge leicht unterscheiden von der offiziellen Sieben-Tage-Inzidenz, wie sie vom RKI berichtet wird. 
+<div style = "width:99% !important; height:auto; margin: auto;">
+```{r tableBL_projektionen}
+DT::datatable(bl_projektionen,
+              extensions = 'Responsive',
+              options = list(paging = FALSE,
+                             columnDefs = list(list(className = 'dt-center', targets = 3:9)),
+                             searching = FALSE,
+                             language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
+                             server = FALSE,
+                             initComplete = DT::JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
+
+```
+</div>
 
 Row
 -----------------------------------------------------------------------
 
+### **Projektionen der Kreise**
+
 <div style = "width:99% !important; height:auto; margin: auto;">
-```{r tableKreise}
-DT::datatable(kreise_table %>%
-                filter(Kreis %in% c(
-                  "Rheinisch-Bergischer Kreis",
-                  "Bochum, Stadt",
-                  "Berlin",
-                  "Unna",
-                  "Bonn, Stadt",
-                  "Braunschweig, Stadt",
-                  "Bremen, Stadt",
-                  "Havelland",
-                  "Vorpommern-Greifswald",
-                  "Herne, Stadt",
-                  "Oberhavel",
-                  "Köln, Stadt",
-                  "Rhein-Sieg-Kreis",
-                  "Leverkusen, Stadt",
-                  "Potsdam, Stadt",
-                  "Märkisch-Oderland",
-                  "Rostock, Stadt",
-                  "Potsdam-Mittelmark"
-                )) %>%
-                select(Kreis, Bundesland, `7-Tage-Inzidenz`),
+```{r tableKreise_projektionen}
+DT::datatable(kreise_projektionen,
               extensions = 'Responsive',
               options = list(paging = TRUE,
-                             pageLength=20,
-                             # columnDefs = list(list(className = 'dt-center', targets = 2:3)),
+                             columnDefs = list(list(className = 'dt-center', targets = 3:9)),
                              searching = TRUE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
                              server = FALSE,
@@ -61,4 +54,3 @@ DT::datatable(kreise_table %>%
 
 ```
 </div>
-
