--- a/Kreise_select.Rmd
+++ b/Kreise_select.Rmd
@@ -6,6 +6,7 @@ output:
        - { title: "Dashboard", href: "Start.html", align: left }
        - { title: "Bundesländer", href: "Bundeslaender.html", align: left }
        - { title: "Kreise", href: "Kreise.html", align: left }
+       - { title: "Projektion", href: "Projektion.html", align: left }
        - { title: "KBV-Report", href: "Report.html", align: left }
        - { title: "Impressum/Datenschutz", href: "Impressum.html", align: left }
     orientation: rows
