--- a/Bundeslaender.Rmd
+++ b/Bundeslaender.Rmd
@@ -32,7 +32,10 @@ DT::datatable(bundeslaender_table,
                              searching = FALSE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
                              server = FALSE,
-                             initComplete = DT::JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
+                             initComplete = DT::JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}"))) %>% formatStyle(
+  'Bundesland',
+  target = 'row',
+  fontWeight = styleEqual(c("Gesamt"), c('bold')))
 
 ```
 </div>
