--- a/Projektion.Rmd
+++ b/Projektion.Rmd
@@ -36,11 +36,18 @@ Row
 DT::datatable(bl_projektionen,
               extensions = 'Responsive',
               options = list(paging = FALSE,
-                             columnDefs = list(list(className = 'dt-center', targets = 3:9)),
+                             columnDefs = list(list(className = 'dt-center', targets = 3:9),
+                                               list(orderData = 10, targets = 4:6),
+                                               list(visible = FALSE, targets = 10),
+                                               list(orderData = 11, targets = 7:9),
+                                               list(visible = FALSE, targets = 11)),
                              searching = FALSE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
                              server = FALSE,
-                             initComplete = DT::JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
+                             initComplete = DT::JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}"))) %>% formatStyle(
+  'Bundesland',
+  target = 'row',
+  fontWeight = styleEqual(c("Gesamt"), c('bold')))
 
 ```
 </div>
@@ -55,7 +62,11 @@ Row
 DT::datatable(kreise_projektionen,
               extensions = 'Responsive',
               options = list(paging = TRUE,
-                             columnDefs = list(list(className = 'dt-center', targets = 3:9)),
+                             columnDefs = list(list(className = 'dt-center', targets = 3:9),
+                                               list(orderData = 10, targets = 4:6),
+                                               list(visible = FALSE, targets = 10),
+                                               list(orderData = 11, targets = 7:9),
+                                               list(visible = FALSE, targets = 11)),
                              searching = TRUE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
                              server = FALSE,
