--- a/Impfungen.Rmd
+++ b/Impfungen.Rmd
@@ -25,7 +25,8 @@ Row
 ### **Impffortschitt in Deutschland** 
 
 Derzeit werden zwei Impfstoffe zur Verhinderung einer COVID-19-Erkrankung eingesetzt (einerseits "Tozinameran" von Biontech/Pfizer sowie "mRNA-1273" von Moderna). Beide Impfstoffe setzen zwei verabreichte Impfdosen (im Abstand von 3 bis 4 Wochen) für einen vollständigen Impfschutz voraus.\
-Das RKI berichtet für Deutschland und die Bundesländer die Gesamtzahl der durchgeführten Impfungen sowie die Zahl der Erst- und Zweitimpfungen. Für die meisten Bundesländer sind auch Zahlen für bestimmte Indikationen verfügbar, z.B. Pflegeheimbewohnende oder ältere Bevölkerung (derzeit Über-80-Jährige). In der untenstehenden Tabelle sind die entsprechenden Anteile in Prozent für die durchgeführten Impfungen relativ zur Größe der jeweiligen Bevölkerungsgruppe angegeben. Weiterhin berichten wir die Anzahl der insgesamt durchgeführten Impfungen (Erst- plus Zweitimpfungen), umgerechnet auf jeweils 100.000 Einwohnende.
+Das RKI berichtet für Deutschland und die Bundesländer die Gesamtzahl der durchgeführten Impfungen sowie die Zahl der Erst- und Zweitimpfungen. Für die meisten Bundesländer sind auch Zahlen für bestimmte Indikationen verfügbar, z.B. Pflegeheimbewohnende oder ältere Bevölkerung (derzeit Über-80-Jährige).\
+In der untenstehenden Tabelle sind die entsprechenden Anteile in Prozent für die durchgeführten Impfungen relativ zur Größe der jeweiligen Bevölkerungsgruppe angegeben (Pflegeheimbewohnende Spalten "PHB", Über-80-Jährige Spalten "Alter", Gesamtbevölkerung Spalten "Gesamt"). Weiterhin berichten wir die Anzahl der insgesamt durchgeführten Impfungen (Erst- plus Zweitimpfungen), umgerechnet auf jeweils 100.000 Einwohnende.
 
 Row
 -----------------------------------------------------------------------
