--- a/Projektion.Rmd
+++ b/Projektion.Rmd
@@ -63,11 +63,19 @@ Row
 DT::datatable(kreise_projektionen,
               extensions = 'Responsive',
               options = list(paging = TRUE,
-                             columnDefs = list(list(className = 'dt-center', targets = 3:9),
-                                               list(orderData = 10, targets = 4:6),
-                                               list(visible = FALSE, targets = 10),
-                                               list(orderData = 11, targets = 7:9),
-                                               list(visible = FALSE, targets = 11)),
+                             columnDefs = list(list(className = 'dt-center', targets = c(3, 5:10)),
+                                               list(orderData = 11, targets = 5),
+                                               list(visible = FALSE, targets = 11),
+                                               list(orderData = 12, targets = 8),
+                                               list(visible = FALSE, targets = 12),
+                                               list(orderData = 13, targets = 6),
+                                               list(visible = FALSE, targets = 13),
+                                               list(orderData = 14, targets = 9),
+                                               list(visible = FALSE, targets = 14),
+                                               list(orderData = 15, targets = 7),
+                                               list(visible = FALSE, targets = 15),
+                                               list(orderData = 16, targets = 10),
+                                               list(visible = FALSE, targets = 16)),
                              searching = TRUE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
                              server = FALSE,
