sort bundeslaender projektionen correctly #60

--- a/Projektion.Rmd
+++ b/Projektion.Rmd
@@ -38,10 +38,18 @@ DT::datatable(bl_projektionen,
               extensions = 'Responsive',
               options = list(paging = FALSE,
                              columnDefs = list(list(className = 'dt-center', targets = 3:9),
-                                               list(orderData = 10, targets = 4:6),
+                                               list(orderData = 10, targets = 4),
                                                list(visible = FALSE, targets = 10),
-                                               list(orderData = 11, targets = 7:9),
-                                               list(visible = FALSE, targets = 11)),
+                                               list(orderData = 11, targets = 7),
+                                               list(visible = FALSE, targets = 11),
+                                               list(orderData = 12, targets = 5),
+                                               list(visible = FALSE, targets = 12),
+                                               list(orderData = 13, targets = 8),
+                                               list(visible = FALSE, targets = 13),
+                                               list(orderData = 14, targets = 6),
+                                               list(visible = FALSE, targets = 14),
+                                               list(orderData = 15, targets = 9),
+                                               list(visible = FALSE, targets = 15)),
                              searching = FALSE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
                              server = FALSE,
