--- a/Bundeslaender.Rmd
+++ b/Bundeslaender.Rmd
@@ -28,7 +28,8 @@ Row
 ```{r tableBL}
 DT::datatable(bundeslaender_table,
               extensions = 'Responsive',
-              options = list(paging = FALSE,
+              options = list(paging = FALSE,        
+                             pageLength=20,
                              columnDefs = list(list(className = 'dt-center', targets = 2:3)),
                              searching = FALSE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
