--- a/Impfungen.Rmd
+++ b/Impfungen.Rmd
@@ -37,7 +37,8 @@ Row
 ```{r tableBL_vacc}
 DT::datatable(vacc_table,
               extensions = 'Responsive',
-              options = list(paging = FALSE,
+              options = list(paging = FALSE,          
+                             pageLength=20,
                              columnDefs = list(list(className = 'dt-center', targets = 2:8)),
                              searching = FALSE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
