--- a/Start.Rmd
+++ b/Start.Rmd
@@ -20,25 +20,25 @@ output:
 ```{r setup, include=FALSE}
 library(flexdashboard)
 # Packages
-library(DT)
-library(DBI)
-library(forcats)
-library(EpiEstim)
-library(plotly)
-library(zicolors)
-library(deSolve)
-library(jsonlite)
-library(readxl)
-library(data.table)
-library(dplyr)
-library(glue)
-library(lubridate)
-library(tidyverse)
-library(tidyr)
-library(stringr)
-library(ggplot2)
-library(dtplyr)
-source("R/functions.R", encoding = "UTF-8")
+# library(DT)
+# library(DBI)
+# library(forcats)
+# library(EpiEstim)
+# library(plotly)
+# library(zicolors)
+# library(deSolve)
+# library(jsonlite)
+# library(readxl)
+# library(data.table)
+# library(dplyr)
+# library(glue)
+# library(lubridate)
+# library(tidyverse)
+# library(tidyr)
+# library(stringr)
+# library(ggplot2)
+# library(dtplyr)
+# source("R/functions.R", encoding = "UTF-8")
 # load("test.RData")
 ```
 
