--- a/Impfungen.Rmd
+++ b/Impfungen.Rmd
@@ -51,3 +51,10 @@ DT::datatable(vacc_table,
 
 ```
 </div>
+
+Row
+------------------------------------------------------------------------
+
+### **Datenbasis- und Quellenangaben**
+
+Für das Zi-Dashboard führen wir Zahlen aus unterschiedlichen Quellen zusammen und erweitern sie mit eigenen Berechnungen. Eine Übersicht über die benutzten Quellen finden Sie [hier](Daten.html).
