--- a/Kreise.Rmd
+++ b/Kreise.Rmd
@@ -41,3 +41,9 @@ DT::datatable(kreise_table,
 ```
 </div>
 
+Row
+------------------------------------------------------------------------
+
+### **Datenbasis- und Quellenangaben**
+
+Für das Zi-Dashboard führen wir Zahlen aus unterschiedlichen Quellen zusammen und erweitern sie mit eigenen Berechnungen. Eine Übersicht über die benutzten Quellen finden Sie [hier](Daten.html).
