--- a/Projektion.Rmd
+++ b/Projektion.Rmd
@@ -92,3 +92,10 @@ DT::datatable(kreise_projektionen,
 
 ```
 </div>
+
+Row
+------------------------------------------------------------------------
+
+### **Datenbasis- und Quellenangaben**
+
+Für das Zi-Dashboard führen wir Zahlen aus unterschiedlichen Quellen zusammen und erweitern sie mit eigenen Berechnungen. Eine Übersicht über die benutzten Quellen finden Sie [hier](Daten.html).
